unpackaged/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__Floor__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Floor__c</fullName>
    <description>High discount for exception pricing based on past sales. If a sales rep wants to use this price, they must discount the quote line manually. This discount may require approvals based on your org&#39;s approval settings.</description>
    <inlineHelpText>Remise élevée pour les prix d&#39;exception basés sur les ventes passées. Si un commercial souhaite utiliser ce prix, il doit appliquer la remise de la ligne de devis manuellement. Cette remise peut nécessiter des approbations en fonction des paramètres d&#39;approbation de votre organisation.</inlineHelpText>
    <label>Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>