unpackaged/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__GuidanceUsed__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__GuidanceUsed__c</fullName>
    <formula>IF(SBQQ__QuoteLine__r.SBQQ__Discount__c == SBQQ__QuoteLine__r.SBQQ__Guidance__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Un commercial a accepté la remise cible à partir de ce prix indicatif dans l&#39;éditeur de ligne de devis.</inlineHelpText>
    <label>Guidance Used</label>
    <type>Checkbox</type>
</CustomField>