unpackaged/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quote containing the quote line related to this pricing guidance.</description>
    <inlineHelpText>Le devis qui contient la ligne de devis associée au prix indicatif.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Line Pricing Guidance</relationshipLabel>
    <relationshipName>QuoteLinePricingGuidance</relationshipName>
    <type>Lookup</type>
</CustomField>