unpackaged/main/default/objects/SBQQ__QuoteLinePricingGuidance__c/fields/SBQQ__Target__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Target__c</fullName>
    <description>Ideal low-range discount based on past sales. If sales reps accept this pricing guidance, Salesforce CPQ applies a discount to reach this price.</description>
    <inlineHelpText>Faible remise idéale basée sur les ventes passées. Si un commercial accepte ce prix indicatif, Salesforce CPQ accorde une remise pour atteindre ce prix.</inlineHelpText>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>